--- a/ES1 TP1/src/Interface/ListaDeAmigos.form
+++ b/ES1 TP1/src/Interface/ListaDeAmigos.form
@@ -115,8 +115,10 @@
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="1" rowCount="0">
-                    <Column editable="true" title="Nome" type="java.lang.Object"/>
+                  <Table columnCount="1" rowCount="1">
+                    <Column editable="false" title="Nome" type="java.lang.Object">
+                      <Data value="Teste1"/>
+                    </Column>
                   </Table>
                 </Property>
               </Properties>
@@ -133,6 +135,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Adicionar Amigo"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
