--- a/ES1 TP1/src/Interface/Main.form
+++ b/ES1 TP1/src/Interface/Main.form
@@ -98,6 +98,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Carrinho"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem8ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
