--- a/ES1 TP1/src/Interface/Carrinho.form
+++ b/ES1 TP1/src/Interface/Carrinho.form
@@ -175,6 +175,9 @@
             <Property name="text" type="java.lang.String" value="Finalizar Compra"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
