--- a/ES1 TP1/src/ComunidadeDialogs/AlterarInformacoesComunidade.form
+++ b/ES1 TP1/src/ComunidadeDialogs/AlterarInformacoesComunidade.form
@@ -162,6 +162,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Salvar Altera&#xe7;&#xf5;es"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
