--- a/ES1 TP1/src/Interface/ListaDeAmigos.form
+++ b/ES1 TP1/src/Interface/ListaDeAmigos.form
@@ -20,7 +20,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="116" max="32767" attributes="0"/>
+              <EmptySpace pref="101" max="32767" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
           </Group>
@@ -144,7 +144,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Id novo amigo:"/>
+            <Property name="text" type="java.lang.String" value="Nome novo amigo:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
