--- a/ES1 TP1/src/ComunidadeDialogs/Membros.form
+++ b/ES1 TP1/src/ComunidadeDialogs/Membros.form
@@ -77,9 +77,8 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="0">
+              <Table columnCount="1" rowCount="0">
                 <Column editable="true" title="Nome" type="java.lang.Object"/>
-                <Column editable="true" title="Id" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
@@ -96,6 +95,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Remover Membro"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
